prevent code blocks from spilling out from page max width

--- a/css/code.css
+++ b/css/code.css
@@ -3,6 +3,10 @@ pre {
     padding: 0.5em 0 0.5em 0.5em;
     border-left: 0.3em solid #bbbbbb;
 }
+pre > code {
+    display: block;
+    overflow-x: auto;
+}
 
 /* Used for both `inline` and ```block``` code. */
 code {
